k8s/portal/base/portal-home-service-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-home-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: portal-home
