k8s/portal/base/portal-grafana-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - Portal
    nginx.ingress.kubernetes.io/auth-secret: portal-basic-auth-grafana
    nginx.ingress.kubernetes.io/auth-type: basic
  name: portal-grafana
  namespace: prometheus
spec:
  rules:
  - host: grafana.placeholder
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
