k8s/portal/base/portal-home-ingress-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: portal-basic-auth-default
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - Portal
  name: portal-home-ingress
  namespace: default
spec:
  rules:
  - host: portal.placeholder
    http:
      paths:
      - backend:
          service:
            name: portal-home-service
            port:
              number: 5000
        path: /
        pathType: Prefix
