k8s/portal/base/portal-longhorn-operator-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - Portal
    nginx.ingress.kubernetes.io/auth-secret: portal-basic-auth-longhorn
    nginx.ingress.kubernetes.io/auth-type: basic
  name: portal-longhorn-operator
  namespace: longhorn-system
spec:
  rules:
  - host: longhorn.placeholder
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
