k8s/portal/base/portal-rabbitmq-ingress-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: portal-rabbitmq-ingress
spec:
  rules:
  - host: rabbitmq.placeholder
    http:
      paths:
      - backend:
          service:
            name: app-rabbitmq
            port:
              number: 15672
        path: /
        pathType: Prefix
